--- a/demo0111/src/main/resources/application.properties
+++ b/demo0111/src/main/resources/application.properties
@@ -1,2 +1,3 @@
+spring.profiles.active = secret
 naver.openapi.movieUrl = https://openapi.naver.com/v1/search/movie.json
 naver.openapi.bookUrl = https://openapi.naver.com/v1/search/book.json
